
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.vehiclecontroller";
option java_outer_classname = "VehicleController";
option objc_class_prefix = "HLW";

package vehiclecontroller;

service VehicleController {
    rpc DriveForward(DriveRequest) returns (DriveResponse) {}
    rpc DriveBackward(DriveRequest) returns (DriveResponse) {}
    rpc Steer(DriveRequest) returns (DriveResponse) {}
    rpc Idle(DriveRequest) returns (DriveResponse) {}
    rpc Brake(DriveRequest) returns (DriveResponse) {}
}

message DriveRequest {
    float torque = 1;
    float angle = 2;
    float brakeTorque = 3;
}

message DriveResponse {
    bool success = 1;
}
